chromeos: Disable SingleProcessMash when multi-process Mash is enabled

The two feature flags are incompatible, so make multi-process mash
take precedence.

Fix some direct references to features::kMash for consistency.

TBR=sky@chromium.org

Bug: 918859
Test: chrome --login-manager --enable-features=Mash logs in
Change-Id: I18ac68e5e7bd01962369549b2b966592b9db0105
Reviewed-on: https://chromium-review.googlesource.com/c/1394796
Commit-Queue: James Cook <jamescook@chromium.org>
Reviewed-by: Steven Bennetts <stevenjb@chromium.org>
Cr-Commit-Position: refs/heads/master@{#619786}
Former-commit-id: cddd568aa23d9153e2e5100e148be9bf8b6e137a